Handle reactive forms for blogpost component

--- a/UI/codepulse/src/app/core/components/navbar/navbar.component.html
+++ b/UI/codepulse/src/app/core/components/navbar/navbar.component.html
@@ -14,10 +14,11 @@
               Admin
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" [routerLink]="['/admin/categories']" routerLinkActive="router-link-active" >Categories</a></li>
-              <!-- <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" [routerLink]="['/admin/categories']" routerLinkActive="router-link-active">Categories</a>
+              </li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+              <li><a class="dropdown-item" [routerLink]="['/admin/blogposts']" routerLinkActive="router-link-active">BlogPosts</a>
+              </li>
             </ul>
           </li>
         </ul>
